# template_render

./: CMakeLists.txt  README.md  package.xml  parameter-pvc-ico.yml  parameter-pvc-uv.yml
include/: icosphere.h  mytypedef.h  octsphere.h  render_common.h
script/: check.py  get_Max_Size_of_Images.py
src/: ICO_Sphere_Render_6D_WxH.cpp  ICO_Sphere_Render_6D_minimum.cpp  ICO_Sphere_Render_6D_original.cpp  OCT_Sphere_Render_6D.cpp  OCT_Sphere_Render_6D_original.cpp  Random_Generation.cpp  Random_Generation_Per_Layer.cpp  UV_Sphere_Render_6D_WxH.cpp  UV_Sphere_Render_6D_minimum.cpp  UV_Sphere_Render_6D_original.cpp
src/libs/: icosphere.cc  octsphere.cc  render_common.cc
stl/: PVC_3hole_40mm.stl
