<?xml version="1.0"?>
<package>
  <name>template_render</name>
  <version>1.0.0</version>
  <description>A Template Render Package for Template Matching.</description>

  <maintainer email="chazqd2007@126.com">ZiqiChai</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
